# python_project

./: README.md  pyproject.toml
05_16/: lesson2.ipynb  lesson3.ipynb
05_30/: lesson7.ipynb  lesson7.py  lesson8.ipynb
06_06/: lesson1.py  lesson2.py  lesson3.py
06_13/: lesson1_1.ipynb  lesson3.ipynb  lesson3_1.ipynb  lesson4.py
06_27/: lesson1.ipynb  lesson1_app.py  lesson2.ipynb  lesson3.ipynb  lesson5.py
07_04/: practice2.ipynb  practice3.ipynb
07_18/: practice1.ipynb  practice2.ipynb  practice3.ipynb  practice4.ipynb
