 [project]
name = "python_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.15.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pygments>=2.20.0",
    "pyqtgraph>=0.14.0",
    "pyside6<6.9",
    "reportlab>=4.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
